# playwith_opengl_linux

./: .gitignore  CMakeLists.txt  main.cpp
include/: Camera.h
src/: glad.c
src/01_triangle/: 01_triangle.cpp
src/02_shader/: 02_shader.cpp  gray.frag  gray.vs  shining.frag  shining.vs  transition.vs
src/03_texture/: 03_texture.cpp  textures.frag
src/04_transform/: 04_transform.cpp  textures.vs
src/05_coordinate/: 05_coordinate.cpp
src/06_camera/: 06_camera.cpp
src/07_light/: 07_light.cpp
src/08_phong/: 08_phong.cpp
src/09_material/: 09_material.cpp  phong.frag
src/10_lightmap/: 10_lightmap.cpp  phong.frag
src/11_multilights/: 11_multilights.cpp
src/12_texturebuffer/: 12_texturebuffer.cpp  textures.frag  textures.vs
